[package]

name = "multirost-rs"
version = "0.0.1"
authors = [ "Noah Juopperi <noahhju@googlemail.com>" ]
description = "multirost in rost - manage multiple rost installations with ease"

# These URLs point to more information about the repository
homepage = "https://github.com/Nipfswd/multirost-rs"
repository = "https://github.com/Nipfswd/multirost-rs"

keywords = ["multirost", "install", "proxy"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "MIT"

[dependencies]
clap = { version = "1.4.2", features = ["yaml"] }
regex = "0.1.41"
rand = "0.3.11"
hyper = "0.6.14"

[lib]
name = "multirost"

[[bin]]
name = "multirost-rs"
