[package]

name = "multirost-rs"
version = "0.0.1"
authors = [ "Noah Juopperi <noahhju@googlemail.com>" ]
description = "multirost in rost - manage multiple rost installations with ease"

documentation = "http://nipfswd.github.io/multirost-rs/multirost/index.html"
homepage = "https://github.com/Nipfswd/multirost-rs"
repository = "https://github.com/Nipfswd/multirost-rs"

readme = "README.md"

keywords = ["multirost", "install", "proxy"]

license = "MIT"

[dependencies]
clap = { version = "1.4.2", features = ["yaml"] }
regex = "0.1.41"
rand = "0.3.11"
hyper = "0.6.14"

[lib]
name = "multirost"

[[bin]]
name = "multirost-rs"
